Custom icons for text editor toolbar. Add spacing to toolbar. Fix tailwind config to use jit.

--- a/frontend/src/renderer/index.css
+++ b/frontend/src/renderer/index.css
@@ -22,10 +22,44 @@ code {
   -webkit-app-region: drag;
 }
 
-.large-icon-controls > svg{
+.toolbar-separator{
+  width: 2px;
+  height: 20px;
+  background: #44444D;
+  /* border-left: 2px solid #44444D; */
+}
+
+.toolbar-no-margin{
+  margin-right: 0 !important;
+}
+
+.ql-snow .ql-formats:after{
+  content: none !important;
+}
+
+/* #toolbar{
+  display: flex !important;
+  gap: 0.5rem;
+} */
+
+#toolbar button{
+  width: auto;
+  height: auto;
+}
+
+/* .ql-formats{
+  display: flex !important;
+  gap: 0.5rem;
+} */
+/* 
+.ql-formats button{
+  display: contents;
+} */
+
+/* .large-icon-controls > svg{
   width: 25px !important;
   height: 25px !important;
-}
+} */
 
 .ql-toolbar, .ql-container, .ql-snow{
   border: none !important;
@@ -37,10 +71,9 @@ code {
   left: 0px !important;
 }
 
-.ql-formats line, .ql-formats path, .ql-formats polyline{
-  /* fill: #72747B !important; */
+/* .ql-formats line, .ql-formats path, .ql-formats polyline{
   stroke: #72747B !important;
-}
+} */
 
 .ql-snow .ql-picker{
   color: #72747B !important;
